Fix: return DTO instead of entity for prefilter